[package]
description = "Knife框架公共宏定义"
edition = "2021"
license = "Apache-2.0"
name = "knife-macro"
repository = "https://github.com/ocaso1987/knife-macro/"
version = "0.1.0"

[lib]
proc-macro = true
test = true

[dependencies]
darling = "0.14.1"
knife-util = { git = "https://github.com/ocaso1987/knife-util.git", branch = "v0.1.0-dev" }
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }

[features]
default = []
