[package]
name = "knife-macro"
version = "0.1.3"
authors = ["ocaso <ocaso1987@qq.com>"]
description = "Knife框架公共宏定义"
repository = "https://github.com/ocaso1987/knife-macro/"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
knife-util = "0.1.3"
darling = "0.14.1"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { version = "1.0.99", features = ["full"] }

[features]
default = []
